[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[dependencies]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwind on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwind on panic

# compile for thumbv7em-none-eabihf
